[gd_scene load_steps=8 format=2]

[ext_resource path="res://images/boss/center_orb.png" type="Texture" id=1]
[ext_resource path="res://bosses/center_orb.gd" type="Script" id=2]
[ext_resource path="res://nodes/health.gd" type="Script" id=3]
[ext_resource path="res://bosses/xian_boss_bullet.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 25.0

[sub_resource type="Animation" id=2]
resource_name = "destroyed"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("Explosion:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "on_hit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("CenterOrb:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Position2D" type="Position2D"]
script = ExtResource( 2 )
damage = 20.0
bullet = ExtResource( 4 )

[node name="CenterOrb" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="CenterOrb"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CenterOrb/Area2D"]
shape = SubResource( 1 )

[node name="Health" type="Node" parent="CenterOrb/Area2D"]
script = ExtResource( 3 )
max_health = 200.0

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/destroyed = SubResource( 2 )
anims/on_hit = SubResource( 3 )

[node name="Explosion" type="CPUParticles2D" parent="."]
emitting = false
amount = 500
one_shot = true
explosiveness = 0.5
lifetime_randomness = 0.3
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
color = Color( 0.109804, 0.764706, 0.713726, 1 )
hue_variation = -0.11
hue_variation_random = 0.55

[connection signal="health_changed" from="CenterOrb/Area2D/Health" to="." method="_on_Health_health_changed"]
[connection signal="health_empty" from="CenterOrb/Area2D/Health" to="." method="_on_Health_health_empty"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
